# tanuj-assignment

assignment1/: Cargo.toml
assignment1/src/: main.rs  read_file.rs
assignment2/: Cargo.toml  build.rs
assignment2/src/: main.rs
assignment2/src/protos/: person.proto
