[package]
name = "final_assignment2"
version = "0.1.0"
edition = "2021"
authors = ["tanuj"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "3"
clap ={ version = "3.1.6", features = ["derive"] }

[build-dependencies]
protobuf-codegen = "3"
protoc-rust = "^2.0"